--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
   compile group: 'redis.clients', name: 'jedis', version: '2.5.2'
   compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.2'
   //compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
+  compile group: 'com.google.code.gson', name: 'gson', version: '2.3'
+  compile group: 'com.alibaba', name: 'fastjson', version: '1.2.46'
 
   testCompile group: 'junit', name: 'junit', version: '4.+'
   testCompile 'org.hamcrest:hamcrest-core:1.3'
